[gd_scene load_steps=8 format=2]

[ext_resource path="res://ui/elements/scripts/element_cloud_node.gd" type="Script" id=1]

[sub_resource type="DynamicFontData" id=4]
font_path = "res://assets/fonts/GemunuLibre-Light.ttf"

[sub_resource type="DynamicFont" id=9]
size = 56
outline_size = 3
outline_color = Color( 0.0980392, 0.184314, 0.313726, 1 )
use_mipmaps = true
use_filter = true
font_data = SubResource( 4 )

[sub_resource type="DynamicFont" id=7]
size = 32
outline_size = 2
outline_color = Color( 0.0980392, 0.184314, 0.313726, 1 )
use_mipmaps = true
use_filter = true
font_data = SubResource( 4 )

[sub_resource type="CircleShape2D" id=3]
radius = 24.0

[sub_resource type="DynamicFont" id=6]
size = 20
outline_size = 2
outline_color = Color( 0.0980392, 0.184314, 0.313726, 1 )
use_mipmaps = true
use_filter = true
font_data = SubResource( 4 )

[sub_resource type="CanvasItemMaterial" id=8]
blend_mode = 1

[node name="CloudNode" type="Node2D"]
script = ExtResource( 1 )

[node name="BG" type="Polygon2D" parent="."]
modulate = Color( 0.262745, 0.682353, 0.823529, 1 )
polygon = PoolVector2Array( -24, 0, 0, -24, 24, 0, 0, 24 )

[node name="LabelName" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = -161.0
margin_top = -18.0
margin_right = 480.0
margin_bottom = 63.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 9 )
text = "test"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelKind" type="Label" parent="."]
margin_left = -91.0
margin_top = -11.0
margin_right = 273.0
margin_bottom = 30.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 7 )
text = "test"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource( 3 )

[node name="ScannerBar" type="ProgressBar" parent="."]
visible = false
margin_left = -40.0
margin_top = 32.0
margin_right = 232.0
margin_bottom = 48.0
rect_scale = Vector2( 0.3, 0.3 )
mouse_filter = 2
max_value = 3.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ScannerBar"]
margin_left = 80.0
margin_top = -27.0
margin_right = 186.0
custom_fonts/font = SubResource( 6 )
text = "scanning..."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reveal" type="Tween" parent="."]

[node name="Marker" type="Line2D" parent="."]
material = SubResource( 8 )
z_index = -1
points = PoolVector2Array( -32, 0, 0, -32, 32, 0, 0, 32, -32, 0 )
width = 1.0
default_color = Color( 0.517647, 0.901961, 1, 1 )
antialiased = true

[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
